Bug 21858 - [4.1 Regression] ICE in compare_values, at tree-vrp.c:301
Summary: [4.1 Regression] ICE in compare_values, at tree-vrp.c:301
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: middle-end (show other bugs)
Version: 4.1.0
: P2 normal
Target Milestone: 4.1.0
Assignee: Richard Biener
URL: http://gcc.gnu.org/ml/gcc-patches/200...
Keywords: ice-on-valid-code, patch
Depends on:
Blocks:
 
Reported: 2005-06-01 03:39 UTC by john.carter
Modified: 2005-06-03 15:18 UTC (History)
3 users (show)

See Also:
Host:
Target:
Build:
Known to work:
Known to fail:
Last reconfirmed: 2005-06-03 09:26:36


Attachments
Preprocessed source that triggers ICE (1.40 KB, application/octet-stream)
2005-06-01 03:40 UTC, john.carter
Details
patch to fold-const.c (396 bytes, patch)
2005-06-02 21:28 UTC, Richard Biener
Details | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description john.carter 2005-06-01 03:39:24 UTC
Preprocessed file supplied (bug.i)

This would appear to be related to RESOLVED bugs
http://gcc.gnu.org/bugzilla/show_bug.cgi?id=21188 and
http://gcc.gnu.org/bugzilla/show_bug.cgi?id=21227

As far as I can make out the fixes for those bugs have been checked in, I'm
using gcc tip of CVS mainline as at Wed Jun  1 02:00 UTC 2005 and the bug is
still present. ie. This is either a different bug manifesting in the same place
or the old bug revived. This affects both the arm and the i686 backends, so I
suspect it is before it hits the backend.)

/usr/local/bin/arm-elf-gcc -v
Using built-in specs.
Target: arm-elf
Configured with: ../combined/configure --target=arm-elf --enable-languages=c,c++
--with-gnu-as --with-gnu-ld --with-newlib
Thread model: single
gcc version 4.1.0 20050601 (experimental)

Also...
/opt/gcc4_1/bin/gcc -v
Using built-in specs.
Target: i686-pc-linux-gnu
Configured with: ../gcc/configure --enable-languages=c --prefix=/opt/gcc4_1
Thread model: posix
gcc version 4.1.0 20050601 (experimental)

Using gcc -v I can see what gcc is running when it crashes, and hence reproduce
the bug like so...
cd /home/johnc/tmp
/opt/gcc4_1/libexec/gcc/i686-pc-linux-gnu/4.1.0/cc1 -fpreprocessed
/home/johnc/tmp/bug.i  -dumpbase bug.i -auxbase bug -Os -std=c9x -v -o
/home/johnc/tmp/bug.s
ignoring nonexistent directory
"/opt/gcc4_1/lib/gcc/i686-pc-linux-gnu/4.1.0/../../../../i686-pc-linux-gnu/include"
#include "..." search starts here:
#include <...> search starts here:
 /usr/local/include
 /opt/gcc4_1/include
 /opt/gcc4_1/lib/gcc/i686-pc-linux-gnu/4.1.0/include
 /usr/include
End of search list.
 strcoll
 dsdblm_CreateBlock

/home/johnc/tmp/bug.i: In function 'dsdblm_CreateBlock':
/home/johnc/tmp/bug.i:201: warning: comparison between pointer and integer
 dsdblm_WriteBlock

Analyzing compilation unitPerforming intraprocedural optimizations
Assembling functions:
 dsdblm_CreateBlock

/home/johnc/tmp/bug.i: In function 'dsdblm_CreateBlock':
/home/johnc/tmp/bug.i:196: internal compiler error: in compare_values, at
tree-vrp.c:301


I can then use gdb on cc1 and put a breakpoint on fancy_abort and get a stack
trace...
where
#0  fancy_abort (file=0x12d <Address 0x12d out of bounds>, line=0,
function=0x12d <Address 0x12d out of bounds>)
    at ../../combined/gcc/diagnostic.c:588
#1  0x08382ab8 in compare_values (val1=0xb7fa8680, val2=0xb7ddfc30) at
../../combined/gcc/tree-vrp.c:410
#2  0x083848bd in compare_range_with_value (comp=LE_EXPR, vr=0xb7dc9840,
val=0xb7ddfc30) at ../../combined/gcc/tree-vrp.c:1234
#3  0x08386e64 in vrp_evaluate_conditional (cond=0xb7d66798) at
../../combined/gcc/tree-vrp.c:1992
#4  0x08387025 in vrp_visit_cond_stmt (stmt=0xb7d6c168, taken_edge_p=0xbf9bec20)
at ../../combined/gcc/tree-vrp.c:2044
#5  0x083874df in vrp_visit_stmt (stmt=0xb7d6c168, taken_edge_p=0x12d,
output_p=0x12d) at ../../combined/gcc/tree-vrp.c:2089
#6  0x08163401 in simulate_stmt (stmt=0xb7d6c168) at
../../combined/gcc/tree-ssa-propagate.c:302
#7  0x08163896 in simulate_block (block=0xb7de2af8) at
../../combined/gcc/tree-ssa-propagate.c:425
#8  0x08164a7d in ssa_propagate (visit_stmt=0x12d, visit_phi=0x12d) at
../../combined/gcc/tree-ssa-propagate.c:667
#9  0x08388526 in execute_vrp () at ../../combined/gcc/tree-vrp.c:2383
#10 0x080d2c02 in execute_one_pass (pass=0x8507600) at
../../combined/gcc/tree-optimize.c:623
#11 0x080d2d28 in execute_pass_list (pass=0x8507600) at
../../combined/gcc/tree-optimize.c:660
#12 0x080d2d48 in execute_pass_list (pass=0x85053c0) at
../../combined/gcc/tree-optimize.c:661
#13 0x080d3008 in tree_rest_of_compilation (fndecl=0xb7de157c) at
../../combined/gcc/tree-optimize.c:793
#14 0x0805d44d in c_expand_body (fndecl=0xb7de157c) at
../../combined/gcc/c-decl.c:6593
#15 0x083adf7a in cgraph_expand_function (node=0xb7de1b64) at
../../combined/gcc/cgraphunit.c:949
#16 0x083ae14b in cgraph_expand_all_functions () at
../../combined/gcc/cgraphunit.c:1013
#17 0x083ae41a in cgraph_optimize () at ../../combined/gcc/cgraphunit.c:1115
#18 0x0834d136 in compile_file () at ../../combined/gcc/toplev.c:1008
#19 0x0834e78b in do_compile () at ../../combined/gcc/toplev.c:2123
#20 0x0834e805 in toplev_main (argc=301, argv=0xbf9bef34) at
../../combined/gcc/toplev.c:2155
#21 0x080b110b in main (argc=301, argv=0x12d) at ../../combined/gcc/main.c:35
Comment 1 john.carter 2005-06-01 03:40:58 UTC
Created attachment 9005 [details]
Preprocessed source that triggers ICE

I have tried to trim this down as much as I can, but it is still quite hairy.
Comment 2 Andrew Pinski 2005-06-01 19:31:22 UTC
Confirmed, reduced testcase:
unsigned int dsdblm_GetBlockAddress();
void error_LocalAssert(void);
int dsdblm_CreateBlock(unsigned int address)
{
   address = dsdblm_GetBlockAddress();
   if (address >= (void*)0x00020000)
     error_LocalAssert();
   return address;
}
This is either a front-end bug or a fold bug.
Comment 3 Diego Novillo 2005-06-01 19:38:50 UTC
Subject: Re:  [4.1 Regression] ICE in compare_values, at tree-vrp.c:301

On Wed, Jun 01, 2005 at 07:31:24PM -0000, pinskia at gcc dot gnu dot org wrote:
> 
> ------- Additional Comments From pinskia at gcc dot gnu dot org  2005-06-01 19:31 -------
> Confirmed, reduced testcase:
> unsigned int dsdblm_GetBlockAddress();
> void error_LocalAssert(void);
> int dsdblm_CreateBlock(unsigned int address)
> {
>    address = dsdblm_GetBlockAddress();
>    if (address >= (void*)0x00020000)
>      error_LocalAssert();
>    return address;
> }
> This is either a front-end bug or a fold bug.
> 
Is this legal C?

vrp15.c: In function `dsdblm_CreateBlock':
vrp15.c:6: warning: comparison between pointer and integer

This is very similar to what I found in the Fortran FE a few days
ago.  The .gimple form is already "wrong":

  D.1242 = dsdblm_GetBlockAddress ();
  address = D.1242;
  if (address > 131071B)

We lose, or never emit, the cast to convert the constant to integer.

However, the optimizers should probably not be ICEing here.  I
will remove the assert in compare_values, to simply refuse to do
anything when pointers and non-pointers are mixed in the same
predicate.


Diego.
Comment 4 Andrew Pinski 2005-06-01 19:40:57 UTC
(In reply to comment #3)
> Is this legal C?

This is not valid C but valid GNU C.  The front-end should be converting the types correctly

Please don't remove the assert, it catches things like this.
Comment 5 Richard Biener 2005-06-02 21:28:50 UTC
Created attachment 9019 [details]
patch to fold-const.c

Fold bug.  Patch attached, will possibly get testing and submitting with
the next round of type fixes.
Comment 6 Richard Biener 2005-06-03 09:26:36 UTC
Revised patch with testcase:
http://gcc.gnu.org/ml/gcc-patches/2005-06/msg00243.html
Comment 7 GCC Commits 2005-06-03 15:15:55 UTC
Subject: Bug 21858

CVSROOT:	/cvs/gcc
Module name:	gcc
Changes by:	rguenth@gcc.gnu.org	2005-06-03 15:15:46

Modified files:
	gcc            : ChangeLog fold-const.c 
	gcc/testsuite  : ChangeLog 
Added files:
	gcc/testsuite/gcc.dg: pr21858.c 

Log message:
	2005-06-03  Richard Guenther  <rguenth@gcc.gnu.org>
	
	PR middle-end/21858
	* fold-const.c (fold_binary): Fix type mismatches in folding
	of comparisons.
	
	* gcc.dg/pr21858.c: New testcase.

Patches:
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/ChangeLog.diff?cvsroot=gcc&r1=2.9021&r2=2.9022
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/fold-const.c.diff?cvsroot=gcc&r1=1.590&r2=1.591
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/testsuite/ChangeLog.diff?cvsroot=gcc&r1=1.5583&r2=1.5584
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/testsuite/gcc.dg/pr21858.c.diff?cvsroot=gcc&r1=NONE&r2=1.1

Comment 8 Richard Biener 2005-06-03 15:18:26 UTC
Fixed.