2005-06-03  Richard Guenther  <rguenth@gcc.gnu.org>

PR middle-end/21858
	* fold-const.c (fold_binary): Fix type mismatches in folding
	of comparisons.

	* gcc.dg/pr21858.c: New testcase.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@100539 138bc75d-0d04-0410-961f-82ee72b054a4